--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
+    "json-server": "^0.14.2",
     "netlify-lambda": "^0.4.0",
-    "serverless-http": "^1.6.0",
-    "json-server": "^0.14.2"
+    "serverless-http": "^1.10.1"
   }
 }
