--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/sandipmavani/netlify-express-json-server#readme",
   "dependencies": {
-    "json-server": "^0.14.2"
+    "json-server": "^0.14.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
