--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
   },
   "homepage": "https://github.com/sandipmavani/netlify-express-json-server#readme",
   "dependencies": {
-    "json-server": "^0.14.2",
+    "json-server": "sandipmavani/json-server",
     "path": "^0.12.7"
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "json-server": "^0.14.2",
     "netlify-lambda": "^0.4.0",
     "serverless-http": "^1.10.1"
   }
